--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body {
   background-color: rgb(233, 205, 150);
-  background-image: url(./img/table.jpg);
+  /* background-image: url(./img/table.jpg); */
   height: 100vh;
   margin: 0;
   display: flex;
@@ -41,7 +41,7 @@ tbody {
   margin: 0;
   padding: 0;
   height: 601.6px;
-  border: 5px solid blue;
+  border: 1px solid rgb(233, 205, 150);
 }
 
 tr {
@@ -122,8 +122,3 @@ button {
   font-size: 30px;
   align-self: center;
 }
-
-
-
-
-
